<resources>
    <string name="app_name">UMS</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="form_download">表单下载</string>
    <string name="form_upload">表单上传</string>
    <string name="maintain_scan">保养扫描</string>
    <string name="check_scan">点检扫描</string>
    <string name="system_name">系统名称</string>
    <string name="action_name">动作分类</string>
    <string name="search">查询</string>
    <string name="form_number">表单编号</string>
    <string name="category">分类</string>
    <string name="line_or_eqp">点检线路/设备</string>
    <string name="description">描述</string>
    <string name="form_status">表单状态</string>
    <string name="operation">操作</string>
    <string name="total_download_progress">总下载进度</string>
    <string name="total_upload_progress">总上传进度</string>
    <string name="input_device_name">输入设备名称</string>
    <string name="ok">确定</string>
    <string name="switch_to_scan">扫描头扫码</string>
    <string name="switch_to_camera">摄像头扫码</string>
    <string name="device_name">设备名称</string>
    <string name="device_code">设备代码</string>
    <string name="device_status">开机</string>
    <string name="maintain_cycle">保养周期</string>
    <string name="maintain_cycle_desc">保养周期描述</string>
    <string name="maintain_plan_date">计划保养日</string>
    <string name="temperature">天气</string>
    <string name="classes">班次</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="relogin">账号失效，请重新登录</string>
    <string name="rt_exit">再按一次退出程序</string>
    <string name="too_lower">低于下限值</string>
    <string name="too_upper">超过上限值</string>
    <string name="have_finish">已完成 %1$s</string>
    <string name="remark">备注</string>
    <string name="device_name_notnull">设备名称不能为空</string>
    
    <string name="spotcheck_route">点检路线</string>
    <string name="spotcheck_route_desc">点检线路描述</string>
    <string name="spotcheck_period">点检周期</string>
    <string name="spotcheck_period_desc">点检周期描述</string>
    <string name="spotcheck_formcode">表单编号</string>
    <string name="spotcheck_date">计划点检日</string>
    <string name="common_device">设备</string>
    <string name="maint_form">保养表单</string>
    <string name="spotcheck_form">点检表单</string>
    <string name="status_planed">已计划</string>
    <string name="status_inprogress">进行中</string>
    <string name="status_complete">已完成</string>
    <string name="status_closed">已结束</string>
    <string name="common_finish">完成</string>
    <string name="common_fail">失败</string>
    <string name="common_pause">暂停</string>
    <string name="common_stop">停止</string>
    <string name="common_download">下载</string>
    <string name="common_upload">上传</string>
    <string name="spotcheck_fill">点检表单%1$s填写</string>
    <string name="maint_fill">保养表单%1$s填写</string>
    <string name="common_savedata">保存数据</string>
    <string name="formdetail_num">保养编号</string>
    <string name="formdetail_lower">下限</string>
    <string name="formdetail_upper">上限</string>
    <string name="formdetail_unit">单位</string>
    <string name="formdetail_input">输入值</string>
    <!--<string name="common_takepicture">拍照</string>-->
    <string name="spotcheck_photomust">请先进行点检拍照后再输入</string>
    <string name="take_video">拍视频</string>
    <string name="take_picture">拍照</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="keep_save">继续保存</string>
    <string name="spotcheck_addremark">照片/视频</string>
    <string name="spotcheck_itemname">点检项目</string>
    <string name="maint_remark">保养备注</string>
    <string name="spotcheck_remark">点检备注</string>
    <string name="token_outdate">登录状态超时，请重新登录</string>
    <string name="login_out">登录超时，请退出重新登录</string>
    <string name="maint_scan">保养扫描</string>
    <string name="spotcheck_scan">点检扫描</string>
    <string name="error_formaction">错误的表单类型</string>
    <string name="error_uploaded">表单已经被上传过</string>
    <string name="language">语言：</string>
    <string name="no_data">没有找到对应数据</string>
    <string name="no_local_data">没有本地缓存的数据</string>
    <string name="notice_save_data">请确认修改的数据已经保存，返回后将丢失未保存数据且无法找回</string>
    <string name="inspect_route">点检线路：</string>
    <string name="spotcheck_finish">点检完成</string>
    <string name="spotcheck_item">点检项目</string>
    <string name="spotcheck_start">点检开始</string>
    <string name="maint_start">保养开始</string>
    <string name="formstatus">表单状态：</string>
    <string name="formstatus_ing">已进行</string>
    <string name="formstatus_planed">已计划</string>
    <string name="formstatus_finish">已完成</string>
    <string name="formstatus_end">已结束</string>
    <string name="device_code2">设备代码：</string>
    <string name="all">全部</string>
    <string name="no_user">没有当前用户信息，请核对后重新输入</string>
    <string name="pass_notnull">密码不能为空</string>
    <string name="pass_error">密码错误</string>
    <string name="userinfo_outdate">保存的用户信息超时，请连接网络后重新登录</string>
    <string name="maint_peroid">保养周期：</string>
    <string name="data_exception">数据异常</string>
    <string name="device_description">设备描述</string>
    <string name="order">序号</string>
    <string name="refuse_permission">拒绝开起权限</string>
    <string name="inspect_route2">点检周期：</string>
    <string name="see_sop">查看sop文件</string>
    <string name="notice_download_form">请先下载表单数据</string>
    <string name="sop_opreate">SOP操作</string>
    <string name="install_word">请先安装office</string>
    <string name="photo_detail">照片详情</string>
    <string name="error_code">错误的二维码</string>
    <string name="all_upload">全部上传</string>
    <string name="all_stop">全部停止</string>
    <string name="all_download">全部下载</string>
    <string name="maint_project">保养项目</string>
    <string name="maint_finish">保养完成</string>
    <string name="empty_notice">的点检数据未录入!</string>
    <string name="last_remark">时间、地点、现场情况详细描述或者异常说明</string>
    <string name="second">秒</string>
    <string name="minute">分</string>
    <string name="hour">时</string>
    <string name="save_video_fail">视频保存失败</string>
    <string name="saving_video">正在保存视频，请稍后</string>
    <string name="choose_systype_action">请先选择系统名称和动作类型</string>
    <string name="giveup_save">放弃保存</string>
    <string name="sure_save">确认已保存</string>
    <string name="sure">确定</string>
    <string name="del_img_notice">确认要删除这一条数据吗？</string>
    <string name="info_downloaded">已下载%1$s张表单</string>
    <string name="info_waitupload">有%1$s条待上传数据</string>
    <string name="info_inprogress">有%1$s张进行中的表单</string>
    <string name="search_not_empty">搜索的内容不能为空</string>
    <string name="search_content">设备代码/点检路线</string>
    <string name="start_record">开始录制</string>
    <string name="file_not_exist">文件路径不存在</string>
    <string name="time_short">时间太短</string>
    <string name="cancel_record">取消录制</string>
    <string name="up_to_cancel">↑ 上滑取消</string>
    <string name="connect_net2download">请连接网络后下载</string>
    <string name="connect_net2upload">请连接网络后再上传</string>
    <string name="current_version">当前版本</string>
    <string name="update">更新</string>
    <string name="version_update">版本升级</string>
    <string name="exit">退出</string>
    <string name="exception">程序运行异常，请退出后重新进入应用</string>
    <string name="sure_del">确定删除这一条本地缓存数据吗?</string>
    <string name="max_down">本地最多只能缓存%1$d条数据，如需继续下载请先到已下载表单界面删除部分表单</string>
    <string name="take_picture_notice">第%1$d项需点检拍照，请先进行点检拍照后再输入！</string>

    <string-array name="deviceStatus">
        <item>ON</item>
        <item>OFF</item>
    </string-array>
</resources>