<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/formDetail_spotTitle"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">
        <TextView
            style="@style/list_header_text"
            android:layout_weight="0.1"
            android:text="@string/spotcheck_addremark"/>
        <TextView
            style="@style/list_header_text"
            android:layout_weight="0.07"
            android:text="@string/order"/>
        <TextView
            style="@style/list_header_text"
            android:layout_weight="0.1"
            android:text="@string/device_code"/>
        <TextView
            style="@style/list_header_text"
            android:layout_weight="0.2"
            android:text="@string/spotcheck_itemname"/>
        <TextView
            style="@style/list_header_text"
            android:layout_weight="0.07"
            android:text="@string/formdetail_lower"/>
        <TextView
            style="@style/list_header_text"
            android:layout_weight="0.07"
            android:text="@string/formdetail_upper"/>
        <TextView
            style="@style/list_header_text"
            android:layout_weight="0.06"
            android:text="@string/formdetail_unit"/>
        <TextView
            style="@style/list_header_text"
            android:layout_weight="0.18"
            android:text="@string/formdetail_input"/>
        <TextView
            style="@style/list_header_text"
            android:layout_weight="0.2"
            android:text="@string/remark"/>
    </LinearLayout>
</merge>