<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/light"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label1"
            style="@style/list_header_text"
            android:text="@string/spotcheck_route"
            android:layout_weight="0.15" />
        <TextView
            android:id="@+id/label2"
            style="@style/list_header_text"
            android:text="@string/spotcheck_route_desc"
            android:layout_weight="0.15" />
        <TextView
            android:id="@+id/label6"
            style="@style/list_header_text"
            android:text="@string/spotcheck_period"
            android:layout_weight="0.15" />
        <TextView
            android:id="@+id/label3"
            style="@style/list_header_text"
            android:text="@string/spotcheck_period_desc"
            android:layout_weight="0.15" />
        <TextView
            android:id="@+id/label4"
            style="@style/list_header_text"
            android:text="@string/spotcheck_formcode"
            android:layout_weight="0.15" />
        <TextView
            android:id="@+id/label5"
            style="@style/list_header_text"
            android:text="@string/spotcheck_date"
            android:layout_weight="0.15" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/form_status"
            android:layout_weight="0.1" />
    </LinearLayout>
    <View
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginBottom="8dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:visibility="gone"/>
    </FrameLayout>

</LinearLayout>