<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/light"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/back"
            android:src="@mipmap/back"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:layout_width="33dp"
            android:layout_height="33dp" />
        <TextView
            android:text="设备SN445455454保养表单"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <ImageView
            android:id="@+id/logout"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/logout"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/username"
            android:text="admin"
            android:layout_toStartOf="@id/logout"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
        <ImageView
            android:src="@mipmap/panda"
            android:layout_toStartOf="@id/username"
            android:layout_marginEnd="6dp"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            style="@style/list_header_text"
            android:text="@string/device_name"
            android:layout_weight="0.2" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/form_number"
            android:layout_weight="0.15" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/maintain_cycle"
            android:layout_weight="0.15" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/maintain_cycle_desc"
            android:layout_weight="0.2" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/maintain_plan_date"
            android:layout_weight="0.15" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/form_status"
            android:layout_weight="0.15" />
    </LinearLayout>
    <View
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginBottom="8dp" />
</LinearLayout>