<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/light"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/system_name"
                android:textColor="#7ba1df"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <RelativeLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_spinner"
                android:layout_height="30dp">
                <Spinner
                    android:id="@+id/systemSpinner"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageView
                    android:padding="8dp"
                    android:layout_alignParentEnd="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/dropdown"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/action_name"
                android:textColor="#7ba1df"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <RelativeLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_spinner"
                android:layout_height="30dp">
                <Spinner
                    android:id="@+id/actionSpinner"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageView
                    android:padding="8dp"
                    android:layout_alignParentEnd="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/dropdown"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.34"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/search"
                android:background="@drawable/bg_btn_search"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="30dp">
                <ImageView
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/search"
                    android:layout_width="30dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:gravity="center"
                    android:textColor="#62a7ea"
                    android:text="@string/search"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10">
        <TextView
            android:id="@+id/form_sort"
            style="@style/list_header_text"
            android:layout_weight="0.1"
            android:text="序号"/>
        <TextView
            style="@style/list_header_text"
            android:text="@string/form_number"
            android:layout_weight="0.2" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/category"
            android:layout_weight="0.1" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/line_or_eqp"
            android:layout_weight="0.15" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/description"
            android:layout_weight="0.2" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/form_status"
            android:layout_weight="0.1" />
        <TextView
            style="@style/list_header_text"
            android:text="@string/operation"
            android:layout_weight="0.15" />
    </LinearLayout>
    <View
        android:background="@color/light"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp" />
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/light"
            android:layout_width="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/total"
                android:text="@string/total_upload_progress"
                android:textColor="@color/text_light_blue"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginStart="@dimen/dp_15"
                android:max="100"/>

            <TextView
                android:id="@+id/progressText"
                tools:text="已完成25%"
                android:textColor="@color/text_light_blue"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0dp"/>

            <LinearLayout
                android:id="@+id/uploadAll"
                android:orientation="horizontal"
                android:background="@drawable/bg_btn_primary_light"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:paddingEnd="@dimen/dp_20"
                android:paddingStart="@dimen/dp_10"
                android:layout_height="@dimen/dp_35">
                <ImageView
                    android:scaleType="fitCenter"
                    android:src="@mipmap/download"
                    android:padding="8dp"
                    android:layout_width="@dimen/dp_35"
                    android:layout_height="@dimen/dp_35" />
                <TextView
                    android:text="@string/all_upload"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/pauseAll"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/bg_btn_primary_light"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:paddingEnd="@dimen/dp_20"
                android:paddingStart="@dimen/dp_10"
                android:layout_height="@dimen/dp_35">
                <ImageView
                    android:scaleType="fitCenter"
                    android:src="@mipmap/pause"
                    android:padding="8dp"
                    android:layout_width="@dimen/dp_35"
                    android:layout_height="@dimen/dp_35" />
                <TextView
                    android:text="@string/all_stop"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>