<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_white_5"
            android:orientation="vertical">
            <TextView
                android:id="@+id/popTakeVideo_tvTakePicture"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:text="@string/take_picture"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/gray3"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_f0"
                android:paddingStart="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"/>

            <TextView
                android:id="@+id/popTakeVideo_tvTakeVideo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:text="@string/take_video"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/gray3"
                android:gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/popTakeVideo_tvCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/radius_white_5"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/red"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>